STS-2842: trouble with spaces in template/example URLs